[package]
name = "sql-studio"
version = "0.1.36"
edition = "2024"
repository = "https://github.com/frectonz/sql-studio"
description = "Single binary, single command SQL Database Explorer."
authors = ["frectonz"]

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive", "env"] }
color-eyre = "0.6.5"
include_dir = "0.7.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["full"] }
tokio-rusqlite = { version = "0.6.0", features = ["bundled"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
warp = "0.3.7"
open = "5.3.2"
futures = "0.3.31"
tokio-postgres = "0.7.13"
mysql_async = { version = "0.36.1", default-features = false, features = ["rustls-tls", "default-rustls"] }
humantime = "2.2.0"
clickhouse = { version = "0.13.3", features = ["rustls-tls"] }
duckdb = { version = "1.3.2", features = ["bundled"], optional = true }
libsql = { version = "0.9.19", features = ["remote"] }
tiberius = { version = "0.12.3", default-features = false, features = ["rustls", "tds73", "tokio", "tokio-util"] }
tokio-util = "0.7.15"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.21.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Whether to install an updater program
install-updater = true
# Skip checking whether the specified configuration files are up to date
allow-dirty = ["ci"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"

[features]
duckdb = [ "dep:duckdb" ]
